[package]
name = "businessday_jp"
version = "0.1.1"
authors = ["atsushi130 <atsushi_main@outlook.jp>"]
license     = "MIT/Apache-2.0"
description = "businessday_jp"
readme      = "readme.md"
repository  = "https://github.com/atsushi130/businessday-jp"
keywords    = ["businessday", "date", "jp", "business"]


[dependencies]
chrono     = "0.4"
holiday_jp = "0.1.2"

[lib]
name = "businessday_jp"
path = "./src/lib.rs"
